Dodanie zaleglych testow